# mmt

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE
data/: LICENSE  NOTICE  config.json  loc.json
data/docs/: Resource Packs.txt  readme.md
data/maps/demo_atlas/: metadata.json
data/maps/demo_atlas/demo_map/: metadata.json
data/res/packs/: pack_registry.json
data/resources/packs/: readme.txt
data/resources/packs/test_pack/: metadata.json  notice.txt  readme.txt
data/resources/packs/test_pack/objects/: objects_test.rres
data/resources/packs/test_pack/textures/: textures_test_1.rres  textures_test_2.rres
src/: HillsAndDales.cpp  HillsAndDales.h  MMT.cpp
src/core/: App.cpp  App.h  AppStates.cpp  AppStates.h  Config.cpp  Config.h  ConfigStructs.h  Localization.cpp  Localization.h  ResourceManager.cpp  ResourceManager.h
src/core/atlas/: Layer.cpp  Layer.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  MapObjectGroup.cpp  MapObjectGroup.h  Quadtree.cpp  Quadtree.h
src/core/ecs/: ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Components.h  ECS.cpp  ECS.h  EcsManager.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.h  Types.h
src/core/ecs/systems/: LayerSystem.h  VisibilitySystem.h
src/core/map/: Atlas.cpp  Atlas.h  ComponentRegistry.h  ComponentSerializer.cpp  ComponentSerializer.h  Components.h  ECS.cpp  ECS.h  EcsInstance.cpp  EcsInstance.h  EcsManager.cpp  EcsManager.h  EcsTypes.h  Map.cpp  Map.h  MapUtil.h  Pack.cpp  Pack.h  PackFolder.cpp  PackFolder.h  PackManager.cpp  PackManager.h  ResourceFolder.h  ResourceManager.cpp  ResourceManager.h  ResourcePack.h  Resources.cpp  Resources.h  Systems.cpp  Systems.h
src/gui/: Gui.cpp  Gui.h  GuiObject.h  GuiStates.h  MainMenu.cpp  MainMenu.h  ResourceView.cpp  ResourceView.h
src/utility/: Defines.h  Json.h  Log.cpp  Log.h  Observer.h  RresImpl.c  RresImpl.h  Serialization.h  StateMachine.h  StringHash.h  StringUtil.h  Zip.cpp  Zip.h
